# server/routes/data.go
@@ -25,10 +25,14 @@ func RouteData(prefix string, e *echo.Echo, db *gorm.DB) {
 	dataRouter.PUT("/attending/XML", func(c *echo.Context) error { return SetAttendingXML(c, db) })
 	dataRouter.PUT("/graduating/XML", func(c *echo.Context) error { return SetGraduatingXML(c, db) })
 	dataRouter.PUT("/averageWage/XML", func(c *echo.Context) error { return SetAverageWageXML(c, db) })
+
+	dataRouter.PUT("/attending/JSON", func(c *echo.Context) error { return SetAttendingJSON(c, db) })
+	dataRouter.PUT("/graduating/JSON", func(c *echo.Context) error { return SetGraduatingJSON(c, db) })
+	dataRouter.PUT("/averageWage/JSON", func(c *echo.Context) error { return SetAverageWageJSON(c, db) })
 }
 
 func GetAttending(c *echo.Context, db *gorm.DB) error {
-	attending, err := gorm.G[models.Attending](db).Find(c.Request().Context())
+	attending, err := gorm.G[models.Attending](db).Order("year asc").Find(c.Request().Context())
 	if err != nil {
 		return c.String(500, err.Error())
 	}
@@ -37,7 +41,7 @@ func GetAttending(c *echo.Context, db *gorm.DB) error {
 }
 
 func GetGraduating(c *echo.Context, db *gorm.DB) error {
-	graduating, err := gorm.G[models.Graduating](db).Find(c.Request().Context())
+	graduating, err := gorm.G[models.Graduating](db).Order("year asc").Find(c.Request().Context())
 	if err != nil {
 		return c.String(500, err.Error())
 	}
@@ -46,7 +50,7 @@ func GetGraduating(c *echo.Context, db *gorm.DB) error {
 }
 
 func GetAverageWage(c *echo.Context, db *gorm.DB) error {
-	averageWages, err := gorm.G[models.AverageWage](db).Find(c.Request().Context())
+	averageWages, err := gorm.G[models.AverageWage](db).Order("year asc").Find(c.Request().Context())
 	if err != nil {
 		return c.String(500, err.Error())
 	}
@@ -258,6 +262,214 @@ func SetGraduatingXML(c *echo.Context, db *gorm.DB) error {
 	defer file.Close()
 
 	parsed, err := parseXML(file)
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+
+	records := make([]models.Graduating, 0, len(parsed)*5)
+	voivodeship := ""
+	for _, elem := range parsed {
+		if elem["Nazwa"] != "" {
+			voivodeship = elem["Nazwa"]
+		}
+		for key, value := range elem {
+			if strings.HasPrefix(key, "Y") {
+				year, err := strconv.Atoi(strings.TrimPrefix(key, "Y"))
+				if err != nil {
+					return c.String(500, err.Error())
+				}
+				graduating, err := strconv.Atoi(value)
+				if err != nil {
+					return c.String(500, err.Error())
+				}
+
+				records = append(records, models.Graduating{
+					Voivodeship:        voivodeship,
+					Year:               year,
+					StudentsGraduating: graduating,
+				})
+			}
+		}
+	}
+
+	err = db.Transaction(func(tx *gorm.DB) error {
+		stmt := &gorm.Statement{DB: tx}
+		if err := stmt.Parse(&models.Graduating{}); err != nil {
+			return err
+		}
+		tableName := stmt.Schema.Table
+		if err := tx.Exec(fmt.Sprintf("TRUNCATE TABLE %s", tableName)).Error; err != nil {
+			return err
+		}
+
+		if err := tx.Create(&records).Error; err != nil {
+			return err
+		}
+		return nil
+	})
+
+	return c.String(200, "Added graduating students to the database")
+}
+
+func SetAttendingJSON(c *echo.Context, db *gorm.DB) error {
+	fileHeader, err := c.FormFile("file")
+	if err != nil {
+		return c.String(400, err.Error())
+	}
+	if fileHeader == nil {
+		return c.String(400, "No file uploaded")
+	}
+	if fileHeader.Size > 50*1024 {
+		return c.String(400, "File too large")
+	}
+
+	file, err := fileHeader.Open()
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+	defer file.Close()
+
+	parsed, err := parseJSON(file)
+	if err != nil {
+		return c.String(400, err.Error())
+	}
+
+	records := make([]models.Attending, 0, len(parsed)*5)
+	voivodeship := ""
+	for _, elem := range parsed {
+		if elem["Nazwa"] != "" {
+			voivodeship = elem["Nazwa"]
+		}
+
+		for key, value := range elem {
+			if yearStr, ok := strings.CutPrefix(key, "Y"); ok {
+				year, err := strconv.Atoi(yearStr)
+				if err != nil {
+					return c.String(500, err.Error())
+				}
+				attending, err := strconv.Atoi(value)
+				if err != nil {
+					return c.String(500, err.Error())
+				}
+
+				records = append(records, models.Attending{
+					Voivodeship:       voivodeship,
+					Year:              year,
+					StudentsAttending: attending,
+				})
+			}
+		}
+	}
+
+	err = db.Transaction(func(tx *gorm.DB) error {
+		stmt := &gorm.Statement{DB: tx}
+		if err := stmt.Parse(&models.Attending{}); err != nil {
+			return err
+		}
+		tableName := stmt.Schema.Table
+		if err := tx.Exec(fmt.Sprintf("TRUNCATE TABLE %s", tableName)).Error; err != nil {
+			return err
+		}
+
+		if err := tx.Create(&records).Error; err != nil {
+			return err
+		}
+		return nil
+	})
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+
+	return c.String(200, "Added attending students to the database")
+}
+
+func SetAverageWageJSON(c *echo.Context, db *gorm.DB) error {
+	fileHeader, err := c.FormFile("file")
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+	if fileHeader == nil {
+		return c.String(400, "No file uploaded")
+	}
+	if fileHeader.Size > 50*1024 {
+		return c.String(400, "File too large")
+	}
+
+	file, err := fileHeader.Open()
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+	defer file.Close()
+
+	parsed, err := parseJSON(file)
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+
+	records := make([]models.AverageWage, 0, len(parsed)*5)
+	voivodeship := ""
+	for _, elem := range parsed {
+		if elem["Nazwa"] != "" {
+			voivodeship = elem["Nazwa"]
+		}
+		for key, value := range elem {
+			if yearStr, ok := strings.CutPrefix(key, "Y"); ok {
+				year, err := strconv.Atoi(yearStr)
+				if err != nil {
+					return c.String(500, err.Error())
+				}
+				averageWage, err := strconv.ParseFloat(strings.Replace(value, ",", ".", 1), 64)
+				if err != nil {
+					return c.String(500, err.Error())
+				}
+
+				records = append(records, models.AverageWage{
+					Voivodeship: voivodeship,
+					Year:        year,
+					AverageWage: averageWage,
+				})
+			}
+		}
+	}
+
+	err = db.Transaction(func(tx *gorm.DB) error {
+		stmt := &gorm.Statement{DB: tx}
+		if err := stmt.Parse(&models.AverageWage{}); err != nil {
+			return err
+		}
+		tableName := stmt.Schema.Table
+		if err := tx.Exec(fmt.Sprintf("TRUNCATE TABLE %s", tableName)).Error; err != nil {
+			return err
+		}
+
+		if err := tx.Create(&records).Error; err != nil {
+			return err
+		}
+		return nil
+	})
+
+	return c.String(200, "Added average wages students to the database")
+}
+
+func SetGraduatingJSON(c *echo.Context, db *gorm.DB) error {
+	fileHeader, err := c.FormFile("file")
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+	if fileHeader == nil {
+		return c.String(400, "No file uploaded")
+	}
+	if fileHeader.Size > 50*1024 {
+		return c.String(400, "File too large")
+	}
+
+	file, err := fileHeader.Open()
+	if err != nil {
+		return c.String(500, err.Error())
+	}
+	defer file.Close()
+
+	parsed, err := parseJSON(file)
 	if err != nil {
 		return c.String(500, err.Error())
 	}
